--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://yt3.googleusercontent.com/viNp17XpEF-AwWwOZSj_TvgobO1CGmUUgcTtQoAG40YaYctYMoUqaRup0rTxxxfQvWw3MvhXesw=s900-c-k-c0x00ffffff-no-rj" />
+    <link rel="icon" type="image/svg+xml" href="https://t3.ftcdn.net/jpg/04/06/91/94/360_F_406919447_kAcC5gdh1rpYlVxwMfHtUTGf24PUYSq8.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gemini Ai</title>
   </head>
