--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://t3.ftcdn.net/jpg/04/06/91/94/360_F_406919447_kAcC5gdh1rpYlVxwMfHtUTGf24PUYSq8.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gemini Ai</title>
+    <title>Woop.ai</title>
   </head>
   <body>
     <div id="root"></div>
